fixed logo alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,14 +13,19 @@ li {
     }
 
 .logo {
+    background-color: transparent;
+    padding: 109px;
+    margin: 0 auto;
+    
+}
+
+.logo img {
     display:block;
     width: 272px;
     height:92px;
-    padding: 109px;
     margin-left: auto;
     margin-right: auto;
 }
-
 .form-example {
     background-color: transparent;
     margin-top: -37px;
